--- a/public/html/home.html
+++ b/public/html/home.html
@@ -50,6 +50,10 @@
                 <div class="d-flex justify-content-center mt-3 login_container">
                     <button type="button" name="button" class="btn login_btn">Login</button>
                 </div>
+                <<div class="mt-4">
+                    <div class="d-flex justify-content-center links">
+                        Don't have an account? <a href="./user.html" class="ml-2">Sign Up</a>
+                    </div>
             </div>
         </div>
     </div>
