--- a/public/html/home.html
+++ b/public/html/home.html
@@ -26,6 +26,7 @@
                 </div>
                 <div class="d-flex justify-content-center form_container">
                     <form>
+                        <h2 style="text-align:center">Sign In</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -50,10 +51,11 @@
                 <div class="d-flex justify-content-center mt-3 login_container">
                     <button type="button" name="button" class="btn login_btn">Login</button>
                 </div>
-                <<div class="mt-4">
+                <div class="mt-4">
                     <div class="d-flex justify-content-center links">
                         Don't have an account? <a href="./user.html" class="ml-2">Sign Up</a>
                     </div>
+                </div>
             </div>
         </div>
     </div>
