--- a/public/html/login.html
+++ b/public/html/login.html
@@ -25,19 +25,19 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form>
+                    <form action="/login" method="post">
                         <h2 style="text-align:center">Sign In</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="" class="form-control input_user" value="" placeholder="username">
+                            <input type="text" name="username" class="form-control input_user" value="" placeholder="username">
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="" class="form-control input_pass" value=""
+                            <input type="password" name="password" class="form-control input_pass" value=""
                                 placeholder="password">
                         </div>
                         <div class="form-group">
@@ -46,14 +46,15 @@
                                 <label class="custom-control-label" for="customControlInline">Remember me</label>
                             </div>
                         </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <button type="submit" name="button" class="btn login_btn">Login</button>
+                        </div>
                     </form>
                 </div>
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <button type="button" name="button" class="btn login_btn">Login</button>
-                </div>
+                
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account? <a href="./user.html" class="ml-2">Sign Up</a>
+                        Don't have an account? <a href="./signup" class="ml-2">Sign Up</a>
                     </div>
                 </div>
             </div>
