--- a/public/html/events.html
+++ b/public/html/events.html
@@ -34,12 +34,12 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
-                            Quote
+                        <div class="card-header" id="headerCard">
+                            <h3>Blah</h3>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
                                 </p>
@@ -49,14 +49,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
-                            Quote
+                        <div class="card-header" id="headerCard">
+                            <h3>Blah</h3>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                    ante.
                                 </p>
                                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
                                         Title</cite></footer>
@@ -64,14 +65,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
-                            Quote
+                        <div class="card-header" id="headerCard">
+                            <h3>IDK</h3>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                    ante.
                                 </p>
                                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
                                         Title</cite></footer>
@@ -81,40 +83,47 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header" id="headerCard">
                             Quote
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                    ante.
                                 </p>
                                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
                                         Title</cite></footer>
                             </blockquote>
                         </div>
                     </div>
+                </div>
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header" id="headerCard">
                             Quote
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                    ante.
                                 </p>
                                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
                                         Title</cite></footer>
                             </blockquote>
                         </div>
                     </div>
+                </div>
+                <div class="col-sm-4" id="cardSet">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header" id="headerCard">
                             Quote
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="bodyCard">
                             <blockquote class="blockquote mb-0">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                                    ante.
                                 </p>
                                 <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
                                         Title</cite></footer>
