Added Vishu's changes

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form>
+                    <form action="/login" method="post">
                         <h2 style="text-align:center">Sign In</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
@@ -37,7 +37,7 @@
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="" class="form-control input_pass" value=""
+                            <input type="password" name="password" class="form-control input_pass" value=""
                                 placeholder="password">
                         </div>
                         <div class="form-group">
@@ -46,10 +46,10 @@
                                 <label class="custom-control-label" for="customControlInline">Remember me</label>
                             </div>
                         </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <button type="button" name="button" class="btn login_btn">Login</button>
+                        </div>
                     </form>
-                </div>
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <button type="button" name="button" class="btn login_btn">Login</button>
                 </div>
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
