--- a/public/html/user.html
+++ b/public/html/user.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form>
+                    <form action="/signup" method="post">
                         <h2 style="text-align:center">Sign Up</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
