--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -12,7 +12,8 @@
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>New Girl Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <title>New Girl User</title>
 </head>
 
 <body>
@@ -25,35 +26,41 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form>
+                    <form action="/signup" method="post">
+                        <h2 style="text-align:center">Sign Up</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="" class="form-control input_user" value="" placeholder="username">
+                            <input type="text" name="username" class="form-control input_user" value="" placeholder="username">
                         </div>
-                        <div class="input-group mb-2">
+                        <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="" class="form-control input_pass" value=""
+                            <input type="password" name="password" class="form-control input_pass" value=""
                                 placeholder="password">
                         </div>
-                        <div class="form-group">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customControlInline">
-                                <label class="custom-control-label" for="customControlInline">Remember me</label>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="inputGroupSelect01">Are You?</label>
                             </div>
+                                <select class="custom-select" id="inputGroupSelect01">
+                                    <option selected>Choose...</option>
+                                    <option>Teacher</option>
+                                    <option>Student</option>
+                                </select>
+                        </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <button type="submit" name="button" class="btn login_btn">Login</button>
                         </div>
                     </form>
                 </div>
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <button type="button" name="button" class="btn login_btn">Login</button>
-                </div>
-                <<div class="mt-4">
+                <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account? <a href="./user.html" class="ml-2">Sign Up</a>
+                        Already have an account? <a href="./home" class="ml-2">Sign In</a>
                     </div>
+                </div>
             </div>
         </div>
     </div>
