Fixed the login and signup html pages

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -27,40 +27,39 @@
                 </div>
                 <div class="d-flex justify-content-center form_container">
                     <form action="/signup" method="post">
-                        <h2 style="text-align:center">Sign Up</h2>
+                        <h2 style="text-align:center" class="signUp">Sign Up</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="" class="form-control input_user" value="" placeholder="username">
+                            <input type="text" name="username" class="form-control input_user" value=""
+                                placeholder="username">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="" class="form-control input_pass" value=""
+                            <input type="password" name="password" class="form-control input_pass" value=""
                                 placeholder="password">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <label class="input-group-text" for="inputGroupSelect01">Are You?</label>
                             </div>
-                            <form name="role">
-                                <select class="custom-select" id="inputGroupSelect01">
-                                    <option selected>Choose...</option>
-                                    <option>Teacher</option>
-                                    <option>Student</option>
-                                </select>
-                            </form>
+                            <select class="custom-select" id="inputGroupSelect01">
+                                <option selected>Choose...</option>
+                                <option>Teacher</option>
+                                <option>Student</option>
+                            </select>
+                        </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <button type="submit" name="button" class="btn login_btn">Login</button>
                         </div>
                     </form>
                 </div>
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <button type="button" name="button" class="btn login_btn">Login</button>
-                </div>
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Already have an account? <a href="./home.html" class="ml-2">Sign In</a>
+                        Already have an account? <a href="./" class="ml-2">Sign In</a>
                     </div>
                 </div>
             </div>
