--- a/public/html/login.html
+++ b/public/html/login.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="d-flex justify-content-center form_container">
                     <form action="/login" method="post">
-                        <h2 style="text-align:center">Sign In</h2>
+                        <h2 style="text-align:center" class="signIn">Sign In</h2>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account? <a href="./user.html" class="ml-2">Sign Up</a>
+                        Don't have an account? <a href="/signup" class="ml-2">Register Here</a>
                     </div>
                 </div>
             </div>
