added validation to models, removed duplicate models, changes from Kip

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Already have an account? <a href="./home" class="ml-2">Sign In</a>
+                        Already have an account? <a href="./" class="ml-2">Sign In</a>
                     </div>
                 </div>
             </div>
