Changed and modified logo on navbar

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar fixed-top my-navbar">
         <div class="brand_logo_container">
-            <img src="../images/logojpeg.jpeg" class="brand_logo" alt="Logo">
+            <img src="../images/logo.jpeg" class="brand_logo" alt="Logo">
         </div>
         <a class="navbar-brand" href="#"></a>
         <form class="form-inline">
