--- a/public/html/login.html
+++ b/public/html/login.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container h-100">
         <div class="d-flex justify-content-center h-100">
-            <div class="user_card">
+            <div class="user_card login_page">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
                         <img src="../images/dolphin.jpeg" class="brand_logo" alt="Logo">
