--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -32,33 +32,38 @@
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="username" class="form-control input_user" value="" placeholder="username">
+                            <input type="text" name="username" class="form-control input_user" value=""
+                                placeholder="Username">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
                             <input type="password" name="password" class="form-control input_pass" value=""
-                                placeholder="password">
+                                placeholder="Password">
                         </div>
                         <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <label class="input-group-text" for="inputGroupSelect01">Are You?</label>
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
                             </div>
-                                <select class="custom-select" id="inputGroupSelect01">
-                                    <option selected>Choose...</option>
-                                    <option>Teacher</option>
-                                    <option>Student</option>
-                                </select>
+                            <input type="email" name="email" class="form-control input_pass" value=""
+                                placeholder="Email@example.com">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fa fa-phone"></i></span>
+                            </div>
+                            <input type="phone" name="phone" class="form-control input_pass" value=""
+                                placeholder="(123) 456-7890">
                         </div>
                         <div class="d-flex justify-content-center mt-3 login_container">
-                            <button type="submit" name="button" class="btn login_btn">Login</button>
+                            <button type="submit" name="button" class="btn login_btn">Register</button>
                         </div>
                     </form>
                 </div>
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Already have an account? <a href="./" class="ml-2">Sign In</a>
+                        Already have an account? <a href="./" class="ml-2">Log In</a>
                     </div>
                 </div>
             </div>
