--- a/public/html/records.html
+++ b/public/html/records.html
@@ -33,23 +33,20 @@
         </form>
     </nav>
     <div class="d-flex justify-content-center h-100">
-        <div class="user_card">
-            <div class="card-header"">
-            <h5>List Of Records Up For Trade</h5>
+        <div class="user_card record_card">
+            <div class="card-header">
+            <h2 class="teal lighten-5" id="serchRecord">Records Up For Trade:</h2>
         </div>
         <!-- record number 1 -->
         <div class=" container" id="recy">
-                <div class="alert alert-light" id="serchRecord" role="alert">
-                    Weyes Blood 'Titanic Rising' Limited Edition.<a style="float:right" href="#"
-                        class="alert-link">search
-                        for user</a>
+                <div class="card teal lighten-4" id="serchRecord" role="alert">
+                    Weyes Blood 'Titanic Rising' Limited Edition.<a style="float:right" href="#" class="alert-link"><br>search for user</a>
                 </div>
             </div>
             <!-- record number 2 -->
-            <div class="container" id="recy">
-                <div class="card teal darken-2" id="serchRecord" role="alert">
-                    Kevin Morby 'OMG' Limited Edition.<a style="float:right" href="#" class="alert-link">search for
-                        user</a>
+            <div class="container contTwo" id="recy">
+                <div class="card teal lighten-3" id="serchRecord" role="alert">
+                    Kevin Morby 'OMG' Limited Edition.<a style="float:right" href="#" class="alert-link"> <br>search for user</a>
                 </div>
             </div>
 
@@ -57,7 +54,7 @@
                 <div style="width:100%" id="cardSet">
                         <div class="row">
                             <div class="col s12 m6">
-                                <div class="card teal lighten-3">
+                                <div class="card teal lighten-2">
                                     <div class="card-content white-text">
                                         <span class="card-title">Kevin Morby</span>
                                         <h6>OMG!</h6>
