--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -33,7 +33,7 @@
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
                             <input type="text" name="username" class="form-control input_user" value=""
-                                placeholder="username">
+                                placeholder="email">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
@@ -45,15 +45,15 @@
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
 
-                                <!-- added email input. need to make pretty! -->
+                                <!-- added email input. need to make pretty!
                                 <label class="input-group-text" for="inputGroupSelect01">Email</label>
                                 <input type="email" name="email" class="form-contrl input_email" value=""
-                                    placeholder="email">
+                                    placeholder="email"> -->
                             </div>
 
                         </div>
                         <div class="d-flex justify-content-center mt-3 login_container">
-                            <button type="submit" name="button" class="btn login_btn">Login</button>
+                            <button type="submit" name="button" class="btn login_btn">Sign Up</button>
                         </div>
                     </form>
                 </div>
