--- a/public/html/collection.html
+++ b/public/html/collection.html
@@ -29,38 +29,60 @@
             <img src="../images/logo.jpeg" class="brand_logo" alt="Logo">
         </div>
         <a class="navbar-brand" href="#"></a>
-        <form class="form-inline">
-            <a href="/logout" class="btn logout-btn" role="button">Logout</a>
-        </form>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/search" class="btn logout-btn" role="button" id="navBut">Search</a></li>
+            <li><a href="/search" class="btn logout-btn" role="button" id="navBut">Your Collection</a></li>
+            <li><a href="/logout" class="btn logout-btn" id="logOut" role="button">Logout</a></li>
+        </ul>
     </nav>
+
     <div class="d-flex justify-content-center h-100">
-        <div class="user_card">
+        <div class="user_card collection_card">
             <div class="record-row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <p class="cool-font">User Name</p>
+                    <h4 class="cool-Font">User Name:</h4>
                     <input class="form-control" type="text" id="author" placeholder="Record Collectors Name">
                     <br>
-                    <p class="cool-font">Records</p>
+                    <h4 class="cool-font">Records:</h4>
                     <textarea class="form-control" rows="10" id="record-box" placeholder="List of Records"></textarea>
-
+                </div>
+            </div>
+            <div class="card albumCard" style="width: 60rem;">
+                <div class="card-header">
+                    Add Album
+                </div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Artist</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Artist Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput2">Album</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Album Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput3">Year</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="YYYY">
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                            value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            Willing To Trade
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                            value="option2">
+                        <label class="form-check-label" for="exampleRadios2">
+                            Not Willing To Trade
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-
-    <div class="card p-3 text-right" id="collectionFooter">
-        <footer class="blockquote-footer">
-            <!-- <small class="text-muted">
-                        BOTTLE NOSE RECORDS</small> -->
-            <small class="text-muted">
-                <cite title="Source Title">"Some people never go crazy. What truly horrible lives they must lead." -
-                    Charles Bukowski</cite>
-            </small>
-            <!-- <small class="text-muted">
-                        BOTTLE NOSE RECORDS</small> -->
-        </footer>
-    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/events.js"></script>
 </body>
