--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,7 +21,7 @@
             <div class="user_card login_page">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
-                        <img src="../images/dolphin.jpeg" class="brand_logo" alt="Logo">
+                        <img src="../images/logo.jpeg" class="brand_logo" alt="Logo">
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
