--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -22,7 +22,7 @@
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
-                        <img src="../images/dolphin.jpeg" class="brand_logo" alt="Logo">
+                        <img src="../images/logo.jpeg" class="brand_logo" alt="Logo">
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
@@ -33,7 +33,7 @@
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
                             <input type="text" name="username" class="form-control input_user" value=""
-                                placeholder="Username">
+                                placeholder="Email@example.com">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-append">
@@ -41,20 +41,6 @@
                             </div>
                             <input type="password" name="password" class="form-control input_pass" value=""
                                 placeholder="Password">
-                        </div>
-                        <div class="input-group mb-3">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
-                            </div>
-                            <input type="email" name="email" class="form-control input_pass" value=""
-                                placeholder="Email@example.com">
-                        </div>
-                        <div class="input-group mb-3">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fa fa-phone"></i></span>
-                            </div>
-                            <input type="phone" name="phone" class="form-control input_pass" value=""
-                                placeholder="(123) 456-7890">
                         </div>
                         <div class="d-flex justify-content-center mt-3 login_container">
                             <button type="submit" name="button" class="btn login_btn">Register</button>
