--- a/public/html/search.html
+++ b/public/html/search.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.dhtmlx.com/scheduler/edge/dhtmlxscheduler.css">
     <link href="../styles/search.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
@@ -19,6 +19,32 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
+        <script>
+            $(() => {
+                $("#form1").click((event) => {
+                    event.preventDefault();
+                    var artist = $("#searchArtist").val();
+                    localStorage.setItem("Search", ["artist", artist]);
+                    window.location.href = "/records";
+                });
+            });
+            $(() => {
+                $("#albumSearchBtn").click((event) => {
+                    event.preventDefault();
+                    var album = $("#searchAlbum").val();
+                    localStorage.setItem("Search", ["album", album]);
+                    window.location.href = "/records";
+                });
+            });
+            $(() => {
+                $("#searchAllBtn").click((event) => {
+                    event.preventDefault();
+                    // var album = $("#searchAlbum").val();
+                    localStorage.setItem("Search", ["all", "all"]);
+                    window.location.href = "/records";
+                });
+            });
+        </script>
 ​
 
 <body>
@@ -46,14 +72,14 @@
                             <div class="input-group-prepend">
                                 <!-- <span class="input-group-text" id="basic-addon1">Artist</span> -->
                             </div>
-                            <input type="text" class="form-control" placeholder="Insert Artist Name Here" class=" teal accent-4"
-                                aria-label="Artist" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="Insert Artist Name Here"
+                                class=" teal accent-4" aria-label="Artist" aria-describedby="basic-addon1">
                         </div>
                     </div>
 
                     <div class="col-2">
                         <div id="cover">
-                            <form method="get" action="">
+                            <form method="get" action="/records">
                                 <div class="tb">
                                     <div class="td" id="s-cover">
                                         <button type="submit">
@@ -82,7 +108,7 @@
 
                     <div class="col-2">
                         <div id="cover">
-                            <form method="get" action="">
+                            <form method="get" action="/records">
                                 <div class="tb">
                                     <div class="td" id="s-cover">
                                         <button id="searchAllBtn" type="submit">
@@ -113,12 +139,13 @@
                     </div>
                 </div>
 
-                <div class="input-group mb-3" class="inputName"> 
-                    <div class="input-group-prepend"><h6 class="searchAll">Search All?</h6>
-                        <div id="cover"> 
-                            <form method="get" action="">
+                <div class="input-group mb-3" class="inputName">
+                    <div class="input-group-prepend">
+                        <h6 class="searchAll">Search All?</h6>
+                        <div id="cover">
+                            <form method="get" action="/records">
                                 <div class="tb">
-                                    <div class="td" id="s-cover"> 
+                                    <div class="td" id="s-cover">
                                         <button type="submit">
                                             <div id="s-circle"></div>
                                             <span></span>
