--- a/public/html/collection.html
+++ b/public/html/collection.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="../styles/collection.css" rel="stylesheet">
+    <link href="../styles/search.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,14 +35,11 @@
                     <div class="tb">
                         <div class="td"><input type="text" class="searchBar" placeholder="Search" required></div>
                         <div class="td" id="s-cover">
-                            <button type="submit">
-                                <div id="s-circle"></div>
-                                <span></span>
-                            </button>
                         </div>
                     </div>
                 </form>
             </div>
+            <li><a href="/search" class="btn logout-btn" role="button" id="navBut">Search</a></li>
             <a href="/logout" class="btn btn-outline-light teal-background white" role="button">Logout</a>
         </form>
     </nav>
