--- a/public/html/search.html
+++ b/public/html/search.html
@@ -54,6 +54,7 @@
         </div>
         <a class="navbar-brand" href="#"></a>
         <form class="form-inline">
+            <li><a href="/collection" class="btn logout-btn" role="button">My Collection</a></li>
             <a href="/logout" class="btn logout-btn" role="button">Logout</a>
         </form>
     </nav>
